vlib/v/checker/tests/result_param_type_err.vv
module main

fn func(arg !string, val &int) ?int {
	unsafe {
		*val = 2
	}
	return 2
}

fn main() {
	_ := map[string]fn (!string, &int) ?int{}
}
